fixed the right banner setting position to relative and align items center added a profile pic and name to right banner

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
   height: 40px;
   border-radius: 50%;
 }
+.user_avatar{
+  height: 30px;
+  border-radius: 50%;
+  padding:  10px;
+}
 .header{
 padding: 15px 20px;
 display: flex;
@@ -71,7 +76,11 @@ box-shadow: 0 5px 8px -9px rgba(0, 0, 0, 0.75);
 }
 .right_banner{
 display: flex;
-position: center;
+position: relative;
+align-items: center;
+}
+.right_banner.h4{
+  margin-left: 10px;
 }
 .right_banner .material-icons{
   color: gray;
